Closed Bug 212686 Opened 23 years ago Closed 23 years ago

Arrowing into form autocomplete dropdown updates autocomplete (often making the dropdown disappear)

Categories

(Firefox :: Address Bar, defect)

x86
Windows 2000
defect
Not set
major

Tracking

()

VERIFIED FIXED
Firebird0.7

People

(Reporter: goi, Assigned: bryner)

Details

(Whiteboard: keyboard navigation)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5a) Gecko/20030714 Mozilla Firebird/0.6 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5a) Gecko/20030714 Mozilla Firebird/0.6 When the form autocomplete drop down list appears when filling in forms, using the keyboard to scroll down the list results in the first entry being selected, and the drop down box disappearing. No further selection can be made. Mouse selections work correctly. Reproducible: Always Steps to Reproduce: 1. Type in a previously filled in form 2. Press down arrow key to scroll down the list of possible matches Actual Results: The first entry will be selected, and the drop down box will disappear Expected Results: The drop down box should remain to allow the user to continue down the list in order to select other entries Could be linked to the fix for bug 212220? Since it only appeared after it was fixed(0714)
I actually reported this as part of bug 184202, not sure if that's correct or not, but this behaviour only became apparent after that bug was (apparently) fixed.
(seen with Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.5a) Gecko/20030714 Mozilla Firebird/0.6) Seeing the same (drop-down goes away on down arrow, grabs the first item). Additionally, characters may be gained or lost. At http://www.mapquest.com/ , when entering the city, if I type a character then down arrow, the character gets prepended to the top selection from the dropdown list. When entering the state, the character gets prepended and the 2nd character of the state gets chopped off. At http://www.britannica.com/, if I type in the 1st character of my username, then downarrow, the 1st two characters of the top selection get deleted. Some boxes work just fine, though (if you happen to want the top selection - I mean they don't add or subtract any characters).
Have you try this using a clean new profile?
Bug occurs with a clean installation, new profile, first site visited.
I have encountered this also. Not only is the first item on the dropdown list automatically selected with the down arrow, but it is sometimes garbled. Example: A field asks for my name, and I type an uppercase "N". A dropdown list appears offering "Neil", "Neil Parks", etc. If I press the down arrow, the field is automatically filled with "Neil", the first entry on the list. But if I type a lowercase "n" instead, something different happens. I get the same drop down list, but this time pressing the down arrow fills the field with "nNeil". Could this be related to the patch that "fixed" bug #212487?
Neil, The capital/lower case thing is reported as bug 194574. Bug 210961 appears to report the same problem as well. The dates on those bugs indicate that the problem is not realted to the checkin of bug 212487. David
David: Bug #194574 is something completely different, dating back to March. It makes no reference to the down arrow automatically selecting the first item on a dropdown list. Your comment #3 in that bug talks about the URL bar, which is not relevant to this bug. You also mentioned using the arrow to scroll down a list--something that still works with the URL bar, but which is currently broken for data-entry fields. Bug #210961 is talking only about the URL bar. This bug, and bug #212487, have nothing to do with the URL bar. We are concerned here only with data-entry fields on a form. The behavior reported in this bug started to occur in mid-July. Bug #212487 was fixed in mid-July. A case of the "post hoc ergo propter hoc" fallacy? Maybe. Or maybe not.
The autocomplete dropdown doesn't disappear. It gets updated. Example: 1. Search Google for "quagmire". 2. Search Google for "quagmires". 3. Search Google for "quantum". 4. Type "q" into a Google Search box. 5. Down arrow to "quagmire", which should be the first entry. Result: the autocomplete dropdown now only shows "quagmires" (like it would if you had typed out "quagmire"). I bet this was caused by bryner's fix for bug 212487, "Form autocomplete is one character behind typed text".
Assignee: hewitt → bryner
Keywords: regression
Summary: Firebird 0714 Form Autocomplete drop down list not responsive to keyboard navigation → Arrowing into form autocomplete dropdown updates autocomplete (often making the dropdown disappear)
Whiteboard: keyboard navigation
Neil, I was only responding to your comment 5 (that the text in the field gets garbled when the case of what is typed differs from what is stored for autocomplete); not the down-arrow problem. I realize the down-arrow problem is probably due to the fix for bug 212487 and does not affect the URL bar. Both the URL bar and form autocomplete show the same symptom of messing up the textfield text when the case differs; that symptom existed before the fix for bug 212487 went in. Therefore, I submit to you that the 'mixed case bug' is distinct from this bug and bug 212487. By referencing bug 194574 and bug 210961, I was attempting to point you to bugs that are probably more relevant to what you mentioned in comment 5. In bug 194574 comment 3, I used the URL bar as the testcase to point out the fact that maybe the 'case problem' lies in some common code that the URL bar and form autocomplete both use. David
Ah, right. When we update the autocomplete text as you arrow down, that will cause a second oninput event.
Attached patch fix — — Splinter Review
This prevents the normal oninput event processing if the input event was caused by autocomplete updating the text field contents.
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Brian, did you check this in on the branch for 0.6.1 as well?
Just waiting for it to clear on tinderbox with no bustage or perf regressions, then I'll do so.
v. 2003072608-trunk 2003072612-1_5a_BRANCH
Status: RESOLVED → VERIFIED
Keywords: regression
Target Milestone: --- → Firebird0.7
v in linux too. Filed 214222 for a new issue I found when selecting one entry then typing a letter from another.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: