Prevent normal handling of oninput events if the event is caused by autocomplete updating the text field value.  Bug 212686.